# NLPiece

./: .gitignore  LICENSE  README.md  pyproject.toml  unpack_manga.sh
notebooks/: ContextualTop2Vec.ipynb  Embeddings.ipynb  GettingEmotional.ipynb  TokenQuality.ipynb
src/: 0_get_character_mapping.py  1_text_extraction.py  2_text_grouper.py  3_generate_datasets.py  saga_mapper_helper.py  utils.py
