[project]
name = "nlpiece"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pip>=25.0",
    "plotly>=6.0.0",
    "pulp>=2.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.28.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "shapely",
    "timm>=1.0.14",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66.5",
    "transformers>=4.48.3",
]

[tool.uv.sources]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]
torch = [{ index = "pytorch-rocm" }]
torchvision = [{ index = "pytorch-rocm" }]


[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"


[project.optional-dependencies]
rocm = [
    "markupsafe==2.1.3",
]

